          supposed to have optional dependencies. ever.
        - Mangle the DBIx/Class.pm POD to be more clear about
          copyright and license
        - Put back PG's multiple autoinc per table support, accidentally
          dropped during the serial-autodetection rwrite
        - Make sure ResultSetColumn does not depend on the (undefined)
          return value of ->cursor->reset()
        - Make sure to turn off IDENTITY_INSERT after insert() on MSSQL
          tables that needed it
        - More informative exception on failing _resolve_relationship

0.08111 2009-09-06 21:58:00 (UTC)
        - The hashref to connection_info now accepts a 'dbh_maker'
          coderef, allowing better intergration with Catalyst
        - Fixed a complex prefetch + regular join regression introduced
          in 0.08108
        - Fixed insert_bulk rebless handling
        - Fixed Storable roundtrip regression, and general serialization
          cleanup
        - SQLT related fixes:
          - sqlt_type is now called on the correct storage object
          - hooks can now see the correct producer_type (RT#47891)
          - optional SQLT requirements for e.g. deploy() bumped to 0.11002
        - Really fixed (and greatly cleaned up) postgresql autoinc sequence
          autodetection
        - Automatically detect MySQL v3 and use INNER JOIN instead of JOIN
        - POD improvements (including RT#48769)
        - Test suite tweaks (including fixes for recent CPANTS fails)
        - Better support for MSSQL IDENTITY_INSERT ON

0.08109 2009-08-18 08:35:00 (UTC)
        - Replication updates:
          - Improved the replication tests so that they are more reliable
            and accurate, and hopefully solve some cross platform issues.
          - Bugfixes related to naming particular replicants in a
            'force_pool' attribute.
          - Lots of documentation updates, including a new Introduction.pod
            file.